# eureka

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  LINTING.md  README.md  TROUBLESHOOTING.md  docker-compose.yml  pyproject.toml
api-server/: Dockerfile
api-server/app/: main.py
api-server/app/routers/: admin.py  ingest.py  query.py
api-server/app/services/: eureka_service.py
api-server/app/utils/: http_utils.py
cli/: helper_functions.py  manage.py
cli/utils/: chunking.py  confluence_ingest.py  jira_ingest.py  s3_ingest.py  test_utils.py  vector_utils.py
config/: llm-engine.yaml  mcp-server.yaml  mcp-servers.json  rag-orchestrator.yaml  vector-db.yaml
llm/: __init__.py  base_client.py  llm_client.py  local_llm.py  models.py
llm-engine/: Dockerfile  app.py  requirements.txt
mcp/: __init__.py  s3.py  slack.py
mcp-server/: Dockerfile  requirements.txt  server.py
mcp-server/connectors/: base_connector.py  confluence_connector.py  jira_connector.py  s3_connector.py
orchestrator/: __init__.py  main.py
rag-orchestrator/: Dockerfile  main.py  requirements.txt
scripts/: download_models.sh
vector-db/: Dockerfile  requirements.txt  server.py
